x overflow on homepage fixed

--- a/personalhomepage/frontend/static/css/index.css
+++ b/personalhomepage/frontend/static/css/index.css
@@ -1,8 +1,8 @@
 
 
 #main {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     left: 0;
     right: 0;
 }
